Make Java client compatible with JDK 11